--- a/content_portfolio/content_portfolio_intro.html
+++ b/content_portfolio/content_portfolio_intro.html
@@ -100,49 +100,23 @@
 
             <!-- Main Content Area -->
             <main class="lesson-main-content">
-                <div class="main-content-header">
-                    <i class="fas fa-folder-open lesson-icon"></i>
+                <div class="main-content-header" style="display: flex; flex-direction: column; align-items: flex-start;">
+                    <span class="lesson-label"><i class="fas fa-book"></i>Lesson</span>
                     <h1>Content and Portfolio Management</h1>
-                    <div class="lesson-info-badges">
-                        <div class="info-item">
-                            <i class="far fa-clock info-icon"></i>
-                            <span>60-90 minutes</span>
-                        </div>
-                        <div class="info-item">
-                            <i class="fas fa-star info-icon" style="color: #f59e0b;"></i>
-                            <span class="badge badge-portfolio">Portfolio</span>
-                        </div>
-                        <div class="info-item">
-                            <i class="fas fa-chart-bar info-icon" style="color: #10b981;"></i>
-                            <span class="badge badge-intermediate">Intermediate</span>
-                        </div>
-                    </div>
+                    <h2 class="main-content-small-title"></h2>
                 </div>
+                
 
                 <div class="main-content-section">
-                    <h2>Introduction to Content and Portfolio Management</h2>
+                    
+                    <h2>Introduction: Managing Content and Portfolios with Archivehubs.com</h2>
                     <img src="https://placehold.co/800x400/ADD8E6/333333?text=Content+Portfolio+Management+Image" alt="Content and Portfolio Management" style="width: 100%; height: auto; max-height: 300px; object-fit: cover;">
                     <p>
-                        Welcome to the Content and Portfolio Management Labs! This comprehensive course will guide you through mastering Archivehubs' advanced features for organizing, managing, and showcasing your digital assets. Learn how to leverage AI-powered tools, collaborate effectively, and create compelling portfolios that highlight your work and achievements.
+                        In today's digital world, efficient content and portfolio management is essential for
+                        individuals and organizations looking to maintain control over their creative assets, streamline workflows, and showcase their work professionally. Archivehubs.com is a dynamic platform that empowers users to securely store, organize, and manage digital assets while also providing powerful tools to build and customize professional portfolios. Whether you're a freelancer, creative professional, business, or team, Archivehubs.com offers AI-driven organization, intuitive file management, seamless collaboration, and interactive portfolio features to help you work smarter and stand out in your field.
                     </p>
-                    <h2>What You'll Learn:</h2>
-                    <ol class="how-it-works-list">
-                        <li><strong>Secure Storage & Organization</strong> – Master file upload, AI-powered tagging, and efficient search capabilities.</li>
-                        <li><strong>Collaboration & Networking</strong> – Connect with professionals, share files securely, and engage with the community.</li>
-                        <li><strong>Portfolio Creation</strong> – Build compelling portfolios to showcase your work and achievements effectively.</li>
-                        <li><strong>Advanced Features</strong> – Explore AI-driven categorization, smart permissions, and professional networking tools.</li>
-                        <li><strong>Best Practices</strong> – Learn industry-standard approaches for digital asset management and portfolio presentation.</li>
-                    </ol>
-
                     <div class="right-platforms-section">
-                        <div class="icon-title-group">
-                            <i class="fas fa-check-circle platform-icon"></i>
-                            <h2>Course Overview</h2>
-                        </div>
-                        <p>
-                            This course is designed for professionals who want to maximize their use of Archivehubs for content management, collaboration, and portfolio development. Whether you're a freelancer, creative professional, or business owner, you'll gain the skills needed to organize, share, and showcase your digital assets effectively.
-                        </p>
-                        <button class="btn" onclick="window.location.href='content_portfolio_assessment.html'">Start Course</button>
+                        <button class="btn" onclick="window.location.href='content_portfolio_assessment.html'">Start</button>
                     </div>
                 </div>
             </main>
