--- a/content_portfolio/portfolio_quiz_question_3.html
+++ b/content_portfolio/portfolio_quiz_question_3.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Knowledge Check - Portfolio: Showcase Work and Achievements</title>
+    <title>Question 3 - Portfolio: Showcase Work and Achievements Knowledge Check</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="css/archive-learning.css">
-    <script src="js/archive-learning.js" defer></script>
+    <script src="js/archive-learning.js"></script>
 </head>
 <body>
     <div class="container">
@@ -24,6 +24,7 @@
         </nav>
         <div class="lesson-page-content">
             <aside class="lesson-sidebar">
+                <!-- Sidebar content copied from previous quiz pages for consistency -->
                 <div class="sidebar-header">
                     <h2>Lesson</h2>
                     <i class="fas fa-times sidebar-close"></i>
@@ -93,19 +94,26 @@
                     <i class="fas fa-clipboard-list lesson-icon"></i>
                     <span class="lesson-label"><i class="fas fa-book"></i>Lesson</span>
                 </div>
-                <div class="assessment-cover-content">
-                    <h1 class="assessment-title">Knowledge Check</h1>
-                    <div class="star-icon-container">
-                        <i class="fas fa-star assessment-star"></i>
+                <div class="quiz-content">
+                    <h1 class="quiz-title">Knowledge Check</h1>
+                    <div class="question-container">
+                        <h2 class="question-number">Question 3:</h2>
+                        <p class="question-text">What are the attributes of portfolio creation and customization?</p>
+                        <p class="question-instruction">Select the correct answer.</p>
+                        <div class="options-container">
+                            <label class="option-item"><input type="radio" name="q3" value="Personalized Portfolio Page"> <span class="option-text">Personalized Portfolio Page</span></label>
+                            <label class="option-item"><input type="radio" name="q3" value="Review and Rating System"> <span class="option-text">Review and Rating System</span></label>
+                            <label class="option-item"><input type="radio" name="q3" value="Custom Domain"> <span class="option-text">Custom Domain</span></label>
+                            <label class="option-item"><input type="radio" name="q3" value="Portfolio Sections"> <span class="option-text">Portfolio Sections</span></label>
+                        </div>
+                        <div class="quiz-navigation">
+                            <button class="btn btn-previous" onclick="window.location.href='portfolio_quiz_question_2.html'">Previous</button>
+                            <button class="btn btn-next" onclick="window.location.href='portfolio_quiz_question_4.html'">Next</button>
+                        </div>
                     </div>
-                    <div class="assessment-details">
-                        <h2 class="assessment-subtitle">Portfolio: Showcase Work and Achievements</h2>
-                        <p class="question-count">5 questions</p>
-                    </div>
-                    <div class="assessment-buttons">
-                        <button class="btn btn-start-quiz" onclick="window.location.href='portfolio_quiz_question_1.html'">Start Quiz</button>
-                        <button class="btn btn-next" onclick="window.location.href='content_portfolio_review.html'">Next</button>
-                    </div>
+                </div>
+                <div class="lesson-navigation-footer">
+                    <a href="#" class="next-lesson-link">Next > Portfolio: Showcase Work and Achievements</a>
                 </div>
             </main>
         </div>
