--- a/content_portfolio/portfolio_quiz_results.html
+++ b/content_portfolio/portfolio_quiz_results.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Knowledge Check - Portfolio: Showcase Work and Achievements</title>
+    <title>Quiz Results - Portfolio: Showcase Work and Achievements</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="css/archive-learning.css">
-    <script src="js/archive-learning.js" defer></script>
+    <script src="js/archive-learning.js"></script>
 </head>
 <body>
     <div class="container">
@@ -93,19 +93,24 @@
                     <i class="fas fa-clipboard-list lesson-icon"></i>
                     <span class="lesson-label"><i class="fas fa-book"></i>Lesson</span>
                 </div>
-                <div class="assessment-cover-content">
-                    <h1 class="assessment-title">Knowledge Check</h1>
-                    <div class="star-icon-container">
-                        <i class="fas fa-star assessment-star"></i>
+                <div class="quiz-results-content">
+                    <h1 class="quiz-title">Knowledge Check</h1>
+                    <div class="results-container">
+                        <h2 class="completion-message">You completed the quiz</h2>
+                        <div class="score-summary">
+                            <div class="score-item">
+                                <span class="score-label">Score:</span>
+                                <span class="score-value" id="portfolio-quiz-score">--%</span>
+                            </div>
+                        </div>
+                        <div class="results-actions">
+                            <button class="btn btn-show-answers" onclick="window.location.href='portfolio_quiz_show_results.html'">Show Answers</button>
+                            <button class="btn btn-retake-quiz" onclick="window.location.href='portfolio_quiz_question_1.html'">Take This Quiz Again</button>
+                        </div>
                     </div>
-                    <div class="assessment-details">
-                        <h2 class="assessment-subtitle">Portfolio: Showcase Work and Achievements</h2>
-                        <p class="question-count">5 questions</p>
-                    </div>
-                    <div class="assessment-buttons">
-                        <button class="btn btn-start-quiz" onclick="window.location.href='portfolio_quiz_question_1.html'">Start Quiz</button>
-                        <button class="btn btn-next" onclick="window.location.href='content_portfolio_review.html'">Next</button>
-                    </div>
+                </div>
+                <div class="lesson-navigation-footer">
+                    <a href="content_portfolio_review.html" class="next-lesson-link">Next &gt; Course Review</a>
                 </div>
             </main>
         </div>
@@ -126,5 +131,14 @@
         </div>
         <p class="enink-learning">Power by ENINK Learning</p>
     </footer>
+    <script>
+        // Display the score from localStorage
+        document.addEventListener('DOMContentLoaded', function() {
+            var score = localStorage.getItem('portfolio_quiz_score');
+            if (score !== null) {
+                document.getElementById('portfolio-quiz-score').textContent = score + '%';
+            }
+        });
+    </script>
 </body>
 </html> 
