--- a/content_portfolio/secure_storage_quiz_question_4.html
+++ b/content_portfolio/secure_storage_quiz_question_4.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Knowledge Check - Portfolio: Showcase Work and Achievements</title>
+    <title>Question 4 - Secure Storage & Organization Knowledge Check</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="css/archive-learning.css">
-    <script src="js/archive-learning.js" defer></script>
+    <script src="js/archive-learning.js"></script>
 </head>
 <body>
     <div class="container">
@@ -49,16 +49,16 @@
                 <ul class="lesson-list">
                     <li class="lesson-list-item"><a href="content_portfolio_intro.html"><span class="lesson-title">Introduction</span> <i class="fas fa-check-circle lesson-status-icon"></i></a></li>
                     <li class="lesson-list-item"><a href="content_portfolio_assessment.html"><span class="lesson-title">Pre-Course Self-Assessment (Optional)</span></a></li>
-                    <li class="lesson-list-item has-submenu">
+                    <li class="lesson-list-item has-submenu expanded">
                         <a href="" class="submenu-toggle">
                             <span class="lesson-title">Secure Storage & Organization</span> 
                             <i class="fas fa-chevron-down submenu-icon"></i>
                         </a>
-                        <ul class="submenu">
+                        <ul class="submenu" style="max-height: 200px;">
                             <li class="submenu-item"><a href="upload_managing_assets.html"><span class="lesson-title">Uploaded & Managing Digital Assets on Archivehubs.com</span></a></li>
                             <li class="submenu-item"><a href="ai_powered_tagging.html"><span class="lesson-title">AI – Powered Tagging & Categorization on Archivehubs.com</span></a></li>
                             <li class="submenu-item"><a href="searching_retrieving_files.html"><span class="lesson-title">Searching & Retrieving Files Efficiently on Archivehubs.com</span></a></li>
-                            <li class="submenu-item"><a href="secure_storage_knowledge_check.html"><span class="lesson-title">Knowledge Check</span></a></li>
+                            <li class="submenu-item active"><a href="secure_storage_knowledge_check.html"><span class="lesson-title">Knowledge Check</span></a></li>
                         </ul>
                     </li>
                     <li class="lesson-list-item has-submenu">
@@ -73,16 +73,16 @@
                             <li class="submenu-item"><a href="collaboration_knowledge_check.html"><span class="lesson-title">Knowledge Check</span></a></li>
                         </ul>
                     </li>
-                    <li class="lesson-list-item has-submenu expanded">
+                    <li class="lesson-list-item has-submenu">
                         <a href="" class="submenu-toggle">
                             <span class="lesson-title">Portfolio: Showcase Work and Achievements</span> 
                             <i class="fas fa-chevron-down submenu-icon"></i>
                         </a>
-                        <ul class="submenu" style="max-height: 200px;">
+                        <ul class="submenu">
                             <li class="submenu-item"><a href="showcase_work_achievements.html"><span class="lesson-title">Showcase Work and Achievements</span></a></li>
                             <li class="submenu-item"><a href="portfolio_key_features.html"><span class="lesson-title">Key Features of the Portfolio</span></a></li>
                             <li class="submenu-item"><a href="portfolio_use_cases.html"><span class="lesson-title">Potential use cases</span></a></li>
-                            <li class="submenu-item active"><a href="portfolio_knowledge_check.html"><span class="lesson-title">Knowledge Check</span></a></li>
+                            <li class="submenu-item"><a href="portfolio_knowledge_check.html"><span class="lesson-title">Knowledge Check</span></a></li>
                         </ul>
                     </li>
                     <li class="lesson-list-item"><a href="content_portfolio_review.html"><span class="lesson-title">Course Review</span> <i class="fas fa-chevron-right lesson-status-icon"></i></a></li>
@@ -90,21 +90,32 @@
             </aside>
             <main class="lesson-main-content">
                 <div class="main-content-header">
-                    <i class="fas fa-clipboard-list lesson-icon"></i>
                     <span class="lesson-label"><i class="fas fa-book"></i>Lesson</span>
                 </div>
-                <div class="assessment-cover-content">
-                    <h1 class="assessment-title">Knowledge Check</h1>
-                    <div class="star-icon-container">
-                        <i class="fas fa-star assessment-star"></i>
-                    </div>
-                    <div class="assessment-details">
-                        <h2 class="assessment-subtitle">Portfolio: Showcase Work and Achievements</h2>
-                        <p class="question-count">5 questions</p>
-                    </div>
-                    <div class="assessment-buttons">
-                        <button class="btn btn-start-quiz" onclick="window.location.href='portfolio_quiz_question_1.html'">Start Quiz</button>
-                        <button class="btn btn-next" onclick="window.location.href='content_portfolio_review.html'">Next</button>
+                <div class="quiz-content">
+                    <h1 class="quiz-title">Knowledge Check</h1>
+                    <div class="question-container">
+                        <h2 class="question-number">Question 4:</h2>
+                        <p class="question-text">What does Archivehubs.com leverage to automate file organization, making digital asset management smarter and faster?</p>
+                        <p class="question-instruction">Select the correct answer.</p>
+                        <div class="options-container">
+                            <label class="option-item">
+                                <input type="radio" name="question4" value="ai-driving-technology">
+                                <span class="option-text">AI – driving Technology</span>
+                            </label>
+                            <label class="option-item">
+                                <input type="radio" name="question4" value="auto-transcription">
+                                <span class="option-text">Auto Transcription</span>
+                            </label>
+                            <label class="option-item">
+                                <input type="radio" name="question4" value="folders-categorization">
+                                <span class="option-text">Folders Categorization</span>
+                            </label>
+                        </div>
+                        <div class="quiz-navigation">
+                            <button class="btn btn-previous" onclick="window.location.href='secure_storage_quiz_question_3.html'">Previous</button>
+                            <button class="btn btn-next" onclick="window.location.href='secure_storage_quiz_question_5.html'">Next</button>
+                        </div>
                     </div>
                 </div>
             </main>
