congratulations and survey added

--- a/content_portfolio/portfolio_quiz_question_1.html
+++ b/content_portfolio/portfolio_quiz_question_1.html
@@ -86,7 +86,7 @@
                             <li class="submenu-item active"><a href="portfolio_knowledge_check.html"><span class="lesson-title">Knowledge Check</span></a></li>
                         </ul>
                     </li>
-                    <li class="lesson-list-item"><a href="content_portfolio_review.html"><span class="lesson-title">Course Review</span> <i class="fas fa-chevron-right lesson-status-icon"></i></a></li>
+                    <li class="lesson-list-item"><a href="content_portfolio_review.html"><span class="lesson-title">Course Review</span></a></li>
                 </ul>
             </aside>
             <main class="lesson-main-content">
