content management views

--- a/content_portfolio/collaboration_quiz_show_results.html
+++ b/content_portfolio/collaboration_quiz_show_results.html
@@ -214,7 +214,7 @@
                     </div>
                 </div>
                 <div class="lesson-navigation-footer">
-                    <a href="#" class="next-lesson-link">Next > Portfolio: Showcase Work and Achievements</a>
+                    <a href="showcase_work_achievements.html" class="next-lesson-link">Next > Portfolio: Showcase Work and Achievements</a>
                 </div>
             </main>
         </div>
