--- a/content_portfolio/content_portfolio_intro.html
+++ b/content_portfolio/content_portfolio_intro.html
@@ -103,14 +103,12 @@
                 <div class="main-content-header" style="display: flex; flex-direction: column; align-items: flex-start;">
                     <span class="lesson-label"><i class="fas fa-book"></i>Lesson</span>
                     <h1>Content and Portfolio Management</h1>
-                    <h2 class="main-content-small-title"></h2>
+                    <h2 class="main-content-small-title">Introduction: Managing Content and Portfolios with Archivehubs.com</h2>
                 </div>
                 
 
                 <div class="main-content-section">
-                    
-                    <h2>Introduction: Managing Content and Portfolios with Archivehubs.com</h2>
-                    <img src="https://placehold.co/800x400/ADD8E6/333333?text=Content+Portfolio+Management+Image" alt="Content and Portfolio Management" style="width: 100%; height: auto; max-height: 300px; object-fit: cover;">
+                    <img src="images/learning_2.jpg" alt="Content and Portfolio Management" style="width: 100%; height: auto; max-height: 300px; object-fit: cover;">
                     <p>
                         In today's digital world, efficient content and portfolio management is essential for
                         individuals and organizations looking to maintain control over their creative assets, streamline workflows, and showcase their work professionally. Archivehubs.com is a dynamic platform that empowers users to securely store, organize, and manage digital assets while also providing powerful tools to build and customize professional portfolios. Whether you're a freelancer, creative professional, business, or team, Archivehubs.com offers AI-driven organization, intuitive file management, seamless collaboration, and interactive portfolio features to help you work smarter and stand out in your field.
