--- a/content_portfolio/portfolio_knowledge_check.html
+++ b/content_portfolio/portfolio_knowledge_check.html
@@ -104,7 +104,7 @@
                     </div>
                     <div class="assessment-buttons">
                         <button class="btn btn-start-quiz" onclick="window.location.href='portfolio_quiz_question_1.html'">Start Quiz</button>
-                        <button class="btn btn-next" onclick="window.location.href='content_portfolio_review.html'">Next</button>
+                        <!-- <button class="btn btn-next" onclick="window.location.href='content_portfolio_review.html'">Next</button> -->
                     </div>
                 </div>
             </main>
