--- a/content_portfolio/quiz_show_results.html
+++ b/content_portfolio/quiz_show_results.html
@@ -230,7 +230,7 @@
                 </div>
                 
                 <div class="lesson-navigation-footer">
-                    <a href="#" class="next-lesson-link">Next > Secure Storage & Organization</a>
+                    <a href="upload_managing_assets.html" class="next-lesson-link">Next > Secure Storage & Organization</a>
                 </div>
             </main>
         </div>
