--- a/content_portfolio/content_portfolio_congratulations.html
+++ b/content_portfolio/content_portfolio_congratulations.html
@@ -22,7 +22,7 @@
                 <div class="logo">
                     <img src="images/Archivehubs Logo.jpeg" alt="Archivehubs Logo">
                 </div>
-                <span class="brand-text">Fundamentals Labs</span>
+                <span class="brand-text">Content and Portfolio Management Labs</span>
             </div>
             <div class="menu-icon">
                 <i class="fas fa-bars"></i>
