--- a/content_portfolio/secure_storage_knowledge_check.html
+++ b/content_portfolio/secure_storage_knowledge_check.html
@@ -103,7 +103,7 @@
                     </div>
                     <div class="assessment-buttons">
                         <button class="btn btn-start-quiz" onclick="window.location.href='secure_storage_quiz_question_1.html'">Start Quiz</button>
-                        <button class="btn btn-next" onclick="window.location.href='collaboration_knowledge_check.html'">Next &gt; Collaboration &amp; Networking</button>
+                        <!-- <button class="btn btn-next" onclick="window.location.href='collaboration_knowledge_check.html'">Next &gt; Collaboration &amp; Networking</button> -->
                     </div>
                 </div>
             </main>
