--- a/content_portfolio/secure_storage_quiz_show_results.html
+++ b/content_portfolio/secure_storage_quiz_show_results.html
@@ -214,7 +214,7 @@
                     </div>
                 </div>
                 <div class="lesson-navigation-footer">
-                    <a href="#" class="next-lesson-link">Next > Collaboration & Networking</a>
+                    <a href="connecting_professionals.html" class="next-lesson-link">Next > Collaboration & Networking</a>
                 </div>
             </main>
         </div>
