individual profile view

--- a/portfolio_views/private_corporate_profile.html
+++ b/portfolio_views/private_corporate_profile.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Individual Portfolio | archivehubs </title>
+    <title>Private Corporate Profile | archivehubs </title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="css/profile_view.css">
   
@@ -21,7 +21,7 @@
                     <img src="images/profile.jpg" alt="David James" class="profile-picture">                    
                 </div>
                 <div class="profile-details">
-                    <h1>David James</h1>
+                    <h1>Eneh Agbo</h1>
                     <p class="title">Software Engineer</p>
                     <p class="location-connections">Lagos, State · <a href="#">Contact info</a></p>
                     <p class="connections">300+ connections</p>
