--- a/portfolio_views/individual_profile.html
+++ b/portfolio_views/individual_profile.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Individual Portfolio | archivehubs </title>
+    <title>Individual Profile | archivehubs Profile</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="css/profile_view.css">
   
@@ -27,8 +27,8 @@
                     <p class="connections">300+ connections</p>
                     <div class="header-buttons">
                         <button class="primary-button" id="openToMainBtn">Open to</button>
-                        <button class="secondary-button">Add portfolio section</button>
-                        <button class="secondary-button">Enhance portfolio</button>
+                        <button class="secondary-button">Add profile section</button>
+                        <button class="secondary-button">Enhance profile</button>
                         <button class="secondary-button">Resources</button>
                     </div>
                     
@@ -57,7 +57,7 @@
                         <p>Suggestions based on owner's profile and activities including premium suggestions</p>
                     </div>
                     <div class="suggested-card">
-                        <p>Suggestions based on owners profile and activities including premium suggestions</p>
+                        <p>Suggestions based on owner's profile and activities including premium suggestions</p>
                     </div>
                 </div>
             </div>
@@ -152,27 +152,7 @@
                 </div>
             </div>
 
-            <!-- Work Showcase Section -->
-            <div class="card showcase-section">
-                <div class="section-header">
-                    <h2>Work Showcase / Portfolio Pieces</h2>
-                    <div class="header-actions">
-                        <i class="fas fa-plus icon-button"></i>
-                        <i class="fas fa-pencil-alt icon-button edit-btn"></i>
-                    </div>
-                </div>
-                <div class="showcase-item">
-                    <img src="images/Company Logo.png" alt="Project Image" class="showcase-image">
-                    <div class="showcase-details">
-                        <h3>Project Title</h3>
-                        <p class="client">Client/Organization/Personal</p>
-                        <p class="date">Date Completed</p>
-                        <p class="tools">Tools/Technologies Used</p>
-                        <p class="objective">Objective / Brief</p>
-                    </div>
-                </div>
-            </div>
-
+          
             <!-- Licenses & Certifications Section -->
             <div class="card licenses-section">
                 <div class="section-header">
@@ -205,25 +185,7 @@
                 <a href="#" class="show-all">Show all licenses & certifications <i class="fas fa-arrow-right"></i></a>
             </div>
 
-            <!-- Awards Section -->
-            <div class="card awards-section">
-                <div class="section-header">
-                    <h2>Awards and Recognitions (Optional)</h2>
-                    <div class="header-actions">
-                        <i class="fas fa-plus icon-button"></i>
-                        <i class="fas fa-pencil-alt icon-button edit-btn"></i>
-                    </div>
-                </div>
-                <div class="award-item">
-                    <img src="images/Company Logo.png" alt="Award Logo" class="award-logo">
-                    <div class="award-details">
-                        <h3>Best Developer Award</h3>
-                        <p class="awarding-body">Tech Innovation Forum</p>
-                        <p class="year">2023</p>
-                        <p class="context">Recognized for outstanding contributions to open-source projects</p>
-                    </div>
-                </div>
-            </div>
+
 
             <!-- Professional Affiliations Section -->
             <div class="card affiliations-section">
@@ -306,64 +268,11 @@
                 <a href="#" class="show-all">Show all skills <i class="fas fa-arrow-right"></i></a>
             </div>
 
-            <!-- Testimonials Section -->
-            <div class="card testimonials-section">
-                <div class="section-header">
-                    <h2>Testimonials / References (Optional but powerful)</h2>
-                    <div class="header-actions">
-                        <i class="fas fa-plus icon-button"></i>
-                        <i class="fas fa-pencil-alt icon-button edit-btn"></i>
-                    </div>
-                </div>
-                <div class="testimonial-item">
-                    <img src="images/Company Logo.png" alt="Person" class="testimonial-avatar">
-                    <div class="testimonial-details">
-                        <p class="quote">"David is an exceptional developer with great attention to detail."</p>
-                        <p class="author">John Doe, CEO at Tech Solutions</p>
-                    </div>
-                </div>
-            </div>
 
-            <!-- Publications Section -->
-            <div class="card publications-section">
-                <div class="section-header">
-                    <h2>Publications</h2>
-                    <div class="header-actions">
-                        <i class="fas fa-plus icon-button"></i>
-                        <i class="fas fa-pencil-alt icon-button edit-btn"></i>
-                    </div>
-                </div>
-                <div class="publication-item">
-                    <img src="images/Company Logo.png" alt="Publication" class="publication-image">
-                    <div class="publication-details">
-                        <h3>The Future of AI in Web Development</h3>
-                        <p class="author">David James</p>
-                        <p class="status">Published</p>
-                        <p class="date">June 2023</p>
-                        <p class="description">Exploring AI integration in modern web applications</p>
-                    </div>
-                </div>
-            </div>
 
-            <!-- Extracurricular Activities Section -->
-            <div class="card extracurricular-section">
-                <div class="section-header">
-                    <h2>Extracurricular Activities</h2>
-                    <div class="header-actions">
-                        <i class="fas fa-plus icon-button"></i>
-                        <i class="fas fa-pencil-alt icon-button edit-btn"></i>
-                    </div>
-                </div>
-                <div class="activity-item">
-                    <img src="images/Company Logo.png" alt="Activity" class="activity-image">
-                    <div class="activity-details">
-                        <h3>Tech Community Organizer</h3>
-                        <p class="responsibility">Lead Organizer</p>
-                        <p class="description">Organizing monthly tech meetups and hackathons</p>
-                        <p class="date">Since 2021</p>
-                    </div>
-                </div>
-            </div>
+
+
+
 
             <!-- Contact & Links Section -->
             <div class="card contact-section">
@@ -386,26 +295,25 @@
                 </div>
             </div>
 
-            <!-- Appendix Section -->
-            <div class="card appendix-section">
+
+            <!-- References Section -->
+             <div class="card references-section">
                 <div class="section-header">
-                    <h2>Appendix / Extras (Optional)</h2>
+                    <h2>References</h2>
                     <div class="header-actions">
                         <i class="fas fa-plus icon-button"></i>
                         <i class="fas fa-pencil-alt icon-button edit-btn"></i>
                     </div>
                 </div>
-                <div class="appendix-item">
-                    <img src="images/Company Logo.png" alt="Appendix" class="appendix-image">
-                    <div class="appendix-details">
-                        <p class="item">Resume</p>
-                        <p class="item">Project timelines</p>
-                        <p class="item">Detailed case studies</p>
-                        <p class="item">Press features or publications</p>
+                <div class="reference-item">
+                    <img src="images/Company Logo.png" alt="Reference" class="reference-avatar">
+                    <div class="reference-details">
+                        <p>Include contact details with permission</p>
                     </div>
                 </div>
-                <a href="#" class="show-all">Show all appendices <i class="fas fa-arrow-right"></i></a>
             </div>
+
+
 
             <!-- Interests Section -->
             <div class="card interests-section">
@@ -443,7 +351,7 @@
             </div>
 
             <p class="copyright">Get the Archivehubs App General Terms
-                    ARCHIVEHUBS: ENINK Investment Limited © 2025</p>
+                ARCHIVEHUBS: ENINK Investment Limited © 2025</p>
         </div>
 
         <!-- Right Sidebar -->
@@ -462,7 +370,7 @@
             <div class="card sidebar-card target-audiences">
                 <!-- <img src="https://i.ibb.co/q5kY3mJ/profile-pic.png" alt="Profile" class="ad-profile-pic"> -->
                 <!-- <i class="fas fa-star premium-star"></i> -->
-                <h3> Maximize business growth on Archivehubs Ads a platform built for B2B      </h3>
+                <h3>Target high-quality audiences with archivehubs Ads</h3>
                 <button class="get-started-btn">Get started</button>
             </div>
 
@@ -529,6 +437,8 @@
             </div>
         </div>
     </div>
+
+    <div id="modalContainer"></div>
 
     <!-- Modals will be inserted here by JavaScript -->
     <script src="script.js"></script>
